# BCSDM

./: eval_gvf.py  pyproject.toml
utils/: Lie.py  S2_functions.py  S2_metric.py  S2_vis.py
