[project]
name = "bcsdm"
version = "0.1.0"
requires-python = ">=3.10,<3.12"
dependencies = [
    "tensorboardX",
    "wandb",
    "matplotlib",
    "scipy",
    "tqdm",
    "omegaconf>=2.0.0",
    "torch",
    "torchvision",
    "torchaudio",
    "pybullet",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
package = false

[[tool.uv.index]]
name = "pytorch-cu126"
url = "https://download.pytorch.org/whl/cu126"
explicit = true

[tool.uv.sources]
torch = { index = "pytorch-cu126" }
torchvision = { index = "pytorch-cu126" }
torchaudio = { index = "pytorch-cu126" }
